[package]
name = "get_px_deltas_from_lines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "get_px_deltas_from_lines"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.2"
ndarray = "0.15.4"

[dependencies.cpython]
version = "0.7.0"
features = ["extension-module"]
