[package]
name = "get_px_deltas_from_lines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "get_px_deltas_from_lines"
crate-type = ["cdylib"]

[dependencies]
image = "0.25.5"
ndarray = "0.16.1"
num-traits = "0.2.19"
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
